--- a/Travelling site/index.html
+++ b/Travelling site/index.html
@@ -31,7 +31,7 @@
       <div class="header-content">
         <h1 class="h1-heading text-white">Travel the World</h1>
         <p class="text-white">
-          Travel the world easily , join us in this adventure and go to heaven
+          Travel the world easily , join us in this adventure and go to your desired place
         </p>
         <!-- r    I used id to link the explore button on the 1st page to go to 2nd page -->
         <a href="#explore" class="btn btn-primary text-red md-heading"
